--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -152,6 +152,9 @@
     <bool name="config_unplugTurnsOnScreen">true</bool>
 
     <string-array name="config_locationProviderPackageNames" translatable="false">
+        <!-- The standard AOSP fused location provider -->
+        <item>com.android.location.fused</item>
+        <!-- The Google Network Location Services location provider -->
         <item>com.google.android.location</item>
     </string-array>
 
